@@ -1,6 +1,7 @@
 Revision history for MojoSimpleHTTPServer
 
 0.06 2012/06/20
+  - Improved iter function to accept blessed obj in array.
 
 0.05 2012/06/20
   - Added ability to manage session data by signed cookie.
